# cmake-testing

./: CMakeLists.txt
cmake/: CPM.cmake  Tools.cmake
exe/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  stuff.cpp  stuff.h
test/: CMakeLists.txt  something.cpp
